Correccion en la build

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Serigrafia2.loader.js";
+      var loaderUrl = buildUrl + "/ea153e321edf23b9a40b38d65ce41d01.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Serigrafia2.data",
-        frameworkUrl: buildUrl + "/Serigrafia2.framework.js",
-        codeUrl: buildUrl + "/Serigrafia2.wasm",
+        dataUrl: buildUrl + "/ec3d5537198cc4930d7e8b43cc2c1360.data",
+        frameworkUrl: buildUrl + "/641cb9c47951cbfc2e38d599634e508c.framework.js",
+        codeUrl: buildUrl + "/6f9a49c1bda1a5ad3e3f39da3eb80372.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Metaverso",
